tests/neg/i20554-a/Test.scala
//> using options -explain

@Annotation(3, 4) // error // error : Java defined annotation should be called with named arguments
class Test